--- a/index.html
+++ b/index.html
@@ -665,8 +665,7 @@
 			<script src="js/mail-script.js"></script>	
 			<script src="js/main.js"></script>	
 		</body>
-	</html>"><i class="fa fa-linkedin"></i></a>
-                                    <a href="https://www.instagram.com/natashaaamin/"><i class="fa fa-instagram"></i></a>
+	</html>">
                               </div>
                             </div>
                         </div>
