--- a/contact.html
+++ b/contact.html
@@ -442,7 +442,7 @@
 
 		  
 
-            <!-- start footer Area -->
+              <!-- start footer Area -->
             <footer class="footer-area section-gap">
                 <div class="container">
                     <div class="row">
@@ -456,7 +456,7 @@
                                 <p>Let us be social</p>
                                 <div class="footer-social d-flex align-items-center">
                                     <a href="https://www.facebook.com/natasha.amin.54"><i class="fa fa-facebook"></i></a>
-                                    <a href="https://www.linkedin.com/in/nurul-natasha-sia-amin-950929"><i class="fa fa-linkedin"></i></a>
+                                    <a href="www.linkedin.com/in/nurul-natasha-sia-amin-950929"><i class="fa fa-linkedin"></i></a>
                                     <a href="https://www.instagram.com/natashaaamin/"><i class="fa fa-instagram"></i></a>
                               </div>
                             </div>
@@ -483,35 +483,8 @@
 			<script src="js/simple-skillbar.js"></script>							
 			<script src="js/owl.carousel.min.js"></script>							
 			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>	
-		</body>
-	</html>"><i class="fa fa-linkedin"></i></a>
-                                    <a href="https://www.instagram.com/natashaaamin/"><i class="fa fa-instagram"></i></a>
-                              </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            <!-- End footer Area -->		
+			<script src="js/main.js"></script>
 
-			<script src="js/vendor/jquery-2.2.4.min.js"></script>
-			<script src="js/popper.min.js"></script>
-			<script src="js/vendor/bootstrap.min.js"></script>			
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>			
-  			<script src="js/easing.min.js"></script>			
-			<script src="js/hoverIntent.js"></script>
-			<script src="js/superfish.min.js"></script>	
-			<script src="js/jquery.ajaxchimp.min.js"></script>
-			<script src="js/jquery.magnific-popup.min.js"></script>	
-    		<script src="js/jquery.tabs.min.js"></script>						
-			<script src="js/jquery.nice-select.min.js"></script>	
-            <script src="js/isotope.pkgd.min.js"></script>			
-			<script src="js/waypoints.min.js"></script>
-			<script src="js/jquery.counterup.min.js"></script>
-			<script src="js/simple-skillbar.js"></script>							
-			<script src="js/owl.carousel.min.js"></script>							
-			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>	
+
 		</body>
 	</html>
