--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
                                 <p>Let us be social</p>
                                 <div class="footer-social d-flex align-items-center">
                                     <a href="https://www.facebook.com/natasha.amin.54"><i class="fa fa-facebook"></i></a>
-                                    <a href="www.linkedin.com/in/nurul-natasha-sia-amin-950929"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/nurul-natasha-sia-amin-950929"><i class="fa fa-linkedin"></i></a>
                                     <a href="https://www.instagram.com/natashaaamin/"><i class="fa fa-instagram"></i></a>
                               </div>
                             </div>
