--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
-		<link rel="shortcut icon" type="image/x-icon" href="img/tab.ico">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
 		<!-- Author Meta -->
 		<meta name="author" content="colorlib">
 		<!-- Meta Description -->
