--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 	<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
+		<link rel="shortcut icon" href="img/favicon.ico">
+
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		
 
 		<!-- Author Meta -->
 		<meta name="author" content="colorlib">
