--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
 					<div class="row fullscreen align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 banner-left">
 							<h1>Natasha Amin's Portfolio</h1>
-							<p>
-								Hire ME :P
-							</p>
-							<a href="NatashaAmin_Resume.pdf" class="primary-btn text-uppercase">Download Resume</a>
+							
+							<a href="Natasha Resume.pdf" class="primary-btn text-uppercase">Download Resume</a>
 						</div>
 						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
 							<img class="frontImage img-fluid" src="img/natasha.JPG" alt="">
