--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="col-lg-6 col-md-6 banner-left">
 							<h1>Natasha Amin's Portfolio</h1>
 							
-							<a href="Natasha Resume.pdf" class="primary-btn text-uppercase">Download Resume</a>
+							<a href="./Natasha Resume.pdf" class="primary-btn text-uppercase">Download Resume</a>
 						</div>
 						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
 							<img class="frontImage img-fluid" src="img/natasha.JPG" alt="">
